# code-fly

./: LICENSE  README.md  editor.html  newproject.html  next.config.ts  package.json  projectmanager.html  vite.config.ts
src/: Globals.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: Globals.css  layout.tsx
src/app/editor/: Editor_Globals.css  Editor_globals.css  layout.tsx  page.tsx
src/app/editor/components/: FileList.tsx
src/app/editor/components/components/: Editor.tsx  FileTreeRow.css  FileTreeRow.tsx
src/app/newproject/: NewProject_page.css  page.tsx
src/app/projectmanager/: ProjectManager_layout.css  layout.tsx
src/app/projectmanager/components/: Sidebar.css  Sidebar.tsx
src/app/projectmanager/projects/: ProjecftManager_projects.css  page.tsx
src/app/projectmanager/settings/: page.tsx
src/components/: OptionButtons.css  OptionButtons.tsx
src/editor/: main.tsx
src/newproject/: main.tsx
src/newproject/components/: OptionButtons.css  OptionButtons.tsx
src/newproject/routes/: Home.css  Home.tsx
src/projectmanager/: main.tsx
src/projectmanager/componets/: Sidebar.tsx
src/projectmanager/routes/: Projects.tsx
