[package]
name = "php-fly"
version = "1.0.0"
authors = ["Lncvrt", "Puppet57"]
edition = "2024"

[lib]
name = "php_fly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tauri-plugin-dialog = "2.3.2"
tokio = "1.47.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"

