[package]
name = "code-fly"
version = "1.0.0"
authors = ["Lncvrt", "Puppet57"]
edition = "2024"

[lib]
name = "code_fly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-dialog = "2.4.0"
tokio = "1.47.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
zip = "5.1.1"
anyhow = "1.0.99"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"

